<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="false"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/commanderDamageHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/DEFAULT_COMMANDER_DAMAGE_HELPER_TEXT"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commanderDamageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TWENTY_ONE"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commanderDamageChangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/DEFAULT_LIFE_CHANGE"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Touch Zones-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touchZones"
        android:layout_width="match_parent"
        android:clickable="false"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--Upper Touch Zone-->
        <View
            android:id="@+id/lowerTouchZone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperTouchZone" />
        <!--End of Upper Touch Zone-->
        <!--Upper Touch Zone-->
        <View
            android:id="@+id/upperTouchZone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/lowerTouchZone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--End of Upper Touch Zone-->
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--End of Touch Zones-->
</androidx.constraintlayout.widget.ConstraintLayout>