<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Touch Zones-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touchZones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!--Upper Touch Zone-->
        <View
            android:id="@+id/lowerTouchZone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperTouchZone" />
        <!--End of Upper Touch Zone-->
        <!--Upper Touch Zone-->
        <View
            android:id="@+id/upperTouchZone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/lowerTouchZone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--End of Upper Touch Zone-->
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--End of Touch Zones-->
    <TextView
        android:id="@+id/lifeTotalHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/LIFE_TOTAL_HELPER_TEXT"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic|bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/lifeTotalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/simple_divider_line_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/obscuringLine"
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lifeTotalText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/DEFAULT_LIFE_TOTAL"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lifeTotalChangeText"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/DEFAULT_LIFE_CHANGE"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeTotalText" />

</androidx.constraintlayout.widget.ConstraintLayout>